<resources>
    <string name="app_name">AppFood</string>
    <string name="not_log_in">Error al iniciar sesión</string>
    <string name="siguiente">Siguiente</string>
    <string name="menu_navegacion">Menu de Navegación</string>
    <string name="restaurantes">Registrar Restaurantes</string>
    <string name="menu">Registrar Menu</string>
    <string name="clientes">Registrar Clientes</string>
    <string name="pedidos">Hacer Pedidos</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="addcliente">Añadir Cliente</string>
    <string name="addrestaurant">Añadir Restaurante</string>
    <string name="addmenu">Añadir Menu</string>
    <string name="addpedido">Añadir Pedido</string>
    <string name="action_settings">Settings</string>
    <string name="name_menu">Nombre</string>
    <string name="price_menu">Precio</string>
    <string name="insertar">Insertar</string>
    <string name="photo">Tomar Foto</string>
<<<<<<< HEAD
    <string name="title_activity_maps">Map</string>
=======
    <string name="description">Descripción</string>
>>>>>>> 7b69e9fd4760e14ecd58f13ec8728987a3d39e32
</resources>
